feat: Flag to enable/disable GraalVM at build time (#4295)